--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ Dieses Projekt ist eine Gruppenarbeit von: Mojtaba Hasanzadeh, Narmatha nanthaku
 Arbeitsaufteilug:
 Mojtaba Hasanzadeh: Frontend, Benutzerinterface
 Narmatha Nanthakumar: Frontend, Benutzerinterface
-Kevin Leutwyler: Frontend/Backend, LLM Server, Langchain Schnittstelle
+Kevin Leutwyler: Frontend/Backend, LLM Server, Langchain Schnittstelle, Local Storage, Markmap, Chatbot
 
 -->
 
